adjustments to actually generate final imgae

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+.idea/.idea.Rayz/.idea/.gitignore
+.idea/.idea.Rayz/.idea/encodings.xml
+.idea/.idea.Rayz/.idea/indexLayout.xml
+.idea/.idea.Rayz/.idea/vcs.xml
