--- a/Rayz/Rayz.vcxproj
+++ b/Rayz/Rayz.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="color.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="material.h" />
+    <ClInclude Include="movingSphere.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="sphere.h" />
     <ClInclude Include="utils.h" />
