--- a/Rayz/Rayz.vcxproj
+++ b/Rayz/Rayz.vcxproj
@@ -149,8 +149,10 @@
     <ClInclude Include="intersect.h" />
     <ClInclude Include="material.h" />
     <ClInclude Include="movingSphere.h" />
+    <ClInclude Include="perlin.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="sphere.h" />
+    <ClInclude Include="texture.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="vec3.h" />
   </ItemGroup>
